--- a/code/01/ToDO/src/app/app.component.html
+++ b/code/01/ToDO/src/app/app.component.html
@@ -58,7 +58,18 @@
     </thead>
     <tbody>
       <tr *ngFor="let todo of todos">
-        <td></td>
+        <td>
+          <i
+            class="fa fa-check-circle"
+            aria-hidden="true"
+            *ngIf="todo.complete"
+          ></i>
+          <i
+            class="fa fa-circle-o"
+            aria-hidden="true"
+            *ngIf="!todo.complete"
+          ></i>
+        </td>
         <td>{{ todo.title }}</td>
         <td>{{ todo.date.day }}-{{ todo.date.month }}-{{ todo.date.year }}</td>
         <td *ngIf="!todo.complete">not complete</td>
@@ -71,10 +82,73 @@
           >
             <i class="fa fa-check"></i>
           </button>
-          <button class="btn btn-primary"><i class="fa fa-pencil"></i></button>
-          <button class="btn btn-danger"><i class="fa fa-trash"></i></button>
+          <button class="btn btn-primary" (click)="open(content,todo)"><i class="fa fa-pencil"></i></button>
+          <button class="btn btn-danger">
+            <i class="fa fa-trash" (click)="deleteTod(todo)"></i>
+          </button>
         </td>
       </tr>
     </tbody>
   </table>
 </div>
+
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Profile update</h4>
+    <button
+      type="button"
+      class="close"
+      aria-label="Close"
+      (click)="modal.dismiss('Cross click')"
+    >
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <form [formGroup]="editForm">
+      <div class="form-group">
+        <label for="">Title</label>
+          <div class="input-group">
+            <input type="text" class="form-control" formControlName="title">
+          </div>
+      </div>
+      <div class="form-group">
+        <label for="date">Completion Date</label>
+        <div class="input-group">
+          <input
+            id="date"
+            class="form-control"
+            formControlName="date"
+            placeholder="yyyy-mm-dd"
+            name="dp"
+            ngbDatepicker
+            #dp="ngbDatepicker"
+          />
+          <div class="input-group-append">
+            <button
+              class="btn btn-outline-secondary calendar"
+              (click)="dp.toggle()"
+              type="button"
+            ></button>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button
+      type="button"
+      class="btn btn-danger"
+      (click)="modal.close('Save click')"
+    >
+      Save
+    </button>
+    <button
+    type="button"
+    class="btn btn-primary"
+    (click)="updateTodo()"
+  >
+    Cancel
+  </button>
+  </div>
+</ng-template>
